--- a/conc.cabal
+++ b/conc.cabal
@@ -32,8 +32,12 @@ source-repository head
 library
   hs-source-dirs:
       src
+  ghc-options: -Wall -fno-warn-unused-top-binds -fno-warn-name-shadowing
   exposed-modules:
       Conc.Tree
   build-depends:
       base >=4.7 && <5
+    , deepseq
+    , vector
+    , primitive
   default-language: Haskell2010
